--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Messaging queue server for SAC smart app testing",
   "main": "index.js",
   "dependencies": {
+    "ejs": "^3.1.5",
     "express": "^4.17.1"
   },
   "devDependencies": {},
